--- a/Policies/JSON/Azure_AppService_DP_Use_CNAME_With_SSL/Security - AppService - AuditHostNameSslState.json
+++ b/Policies/JSON/Azure_AppService_DP_Use_CNAME_With_SSL/Security - AppService - AuditHostNameSslState.json
@@ -1,4 +1,5 @@
 {
+  "mode": "All",
   "policyRule": {
     "if": {
       "allOf": [
@@ -7,10 +8,22 @@
           "equals": "Microsoft.Web/sites"
         },
         {
-          "not": {
-            "field": "Microsoft.Web/sites/hostNameSslStates[*].sslState",
-            "notEquals": "disabled"
-          }
+          "count": {
+            "field": "Microsoft.Web/sites/hostNameSslStates[*]",
+            "where": {
+              "allOf": [
+                {
+                  "field": "Microsoft.Web/sites/hostNameSslStates[*].name",
+                  "notContains": ".azurewebsites."
+                },
+                {
+                  "field": "Microsoft.Web/sites/hostNameSslStates[*].sslState",
+                  "equals": "Disabled"
+                }
+              ]
+            }
+          },
+          "greater": 0
         }
       ]
     },
